footer component/listings.html/listings.scss

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            rel="icon"
+            href="img/favicon-icon.svg"
+            type="image/favicon-icon.svg"
+        />
         <link
             href="https://fonts.googleapis.com/css2?family=Bangers&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
             rel="stylesheet"
@@ -638,7 +641,7 @@
                 </div>
             </section>
         </main>
-        <footer class="footer-background">
+        <!-- <footer class="footer-background">
             <div class="footer-main">
                 <div class="footer-top-block">
                     <a href="index.html" class="logo"
@@ -777,7 +780,14 @@
                     <p>Copyright © 2024. JustHome</p>
                 </div>
             </div>
-        </footer>
+        </footer> -->
+        <div class="iframe-footer-conteiner">
+            <iframe
+                class="iframe-footer"
+                src="/components/footer.html"
+                scrolling="no"
+            ></iframe>
+        </div>
         <script
             src="https://kit.fontawesome.com/7d14a42481.js"
             crossorigin="anonymous"
