listings page, 2 sections and widgets

--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@
         </header>
         <main>
             <section class="column-widgets">
-                <h2>Featured Properties</h2>
+                <div class="categories-title">
+                    <h2>Featured Properties</h2>
+                </div>
                 <div class="row-widgets">
                     <div class="widget">
                         <div class="image-background"></div>
