--- a/pages/listings.html
+++ b/pages/listings.html
@@ -133,140 +133,241 @@
                         <p>New York</p>
                         <p>8 Properties</p>
                     </div>
-                    <div>
-                        <p></p>
-                        <p></p>
+                    <div class="cities-widget">
+                        <p>New York</p>
+                        <p>8 Properties</p>
                     </div>
-                    <div>
-                        <p></p>
-                        <p></p>
+                    <div class="cities-widget">
+                        <p>New York</p>
+                        <p>8 Properties</p>
                     </div>
-                    <div>
-                        <p></p>
-                        <p></p>
+                    <div class="cities-widget">
+                        <p>New York</p>
+                        <p>8 Properties</p>
                     </div>
-                    <div>
-                        <p></p>
-                        <p></p>
+                    <div class="cities-widget">
+                        <p>New York</p>
+                        <p>8 Properties</p>
                     </div>
                 </div>
             </section>
-            <section>
-                <div class="widget">
-                    <div class="image-background"></div>
-                    <div class="widget-description">
-                        <p class="widget-title">Luxury Family Home</p>
-                        <div class="location">
-                            <img src="../img/pin-Icon.svg" alt="pin-Icon" />
-                            <p>1800-1818 79th St</p>
-                        </div>
-                        <div class="description-row">
-                            <div class="price">
-                                <p>&#36;395,000</p>
+            <section class="column-widgets">
+                <div class="categories-header">
+                    <div class="categories-title">
+                        <h2 >Featured Categories</h2>
+                        <p>Lorem ipsum dolor sit amet</p>
+                    </div>
+                    <div class="news-widget-btn">
+                        <button class="widget-btn" type="button">
+                            View All Categories
+                            <img
+                                src="../img/arrow-for-button-icon.svg"
+                                alt="arrow-for-button-icon"
+                            />
+                        </button>
+                    </div>
+                </div>
+                <div class="row-widgets">
+                    <div class="widget">
+                        <div class="image-background"></div>
+                        <div class="widget-description">
+                            <p class="widget-title">Luxury Family Home</p>
+                            <div class="location">
+                                <img src="../img/pin-Icon.svg" alt="pin-Icon" />
+                                <p>1800-1818 79th St</p>
                             </div>
-                            <div class="specification">
-                                <div class="bedrooms">
-                                    <img
-                                        src="../img/bed-icon.svg"
-                                        alt="bed-icon"
-                                    />
-                                    <p>4</p>
+                            <div class="description-row">
+                                <div class="price">
+                                    <p>&#36;395,000</p>
                                 </div>
-                                <div class="bathrooms">
-                                    <img
-                                        src="../img/bath-icon.svg"
-                                        alt="bath-icon"
-                                    />
-                                    <p>1</p>
+                                <div class="specification">
+                                    <div class="bedrooms">
+                                        <img
+                                            src="../img/bed-icon.svg"
+                                            alt="bed-icon"
+                                        />
+                                        <p>4</p>
+                                    </div>
+                                    <div class="bathrooms">
+                                        <img
+                                            src="../img/bath-icon.svg"
+                                            alt="bath-icon"
+                                        />
+                                        <p>1</p>
+                                    </div>
+                                    <div class="square">
+                                        <img
+                                            src="../img/square-icon.svg"
+                                            alt="square-icon"
+                                        />
+                                        <p>400</p>
+                                    </div>
                                 </div>
-                                <div class="square">
-                                    <img
-                                        src="../img/square-icon.svg"
-                                        alt="square-icon"
-                                    />
-                                    <p>400</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="widget">
+                        <div class="image-background"></div>
+                        <div class="widget-description">
+                            <p class="widget-title">Luxury Family Home</p>
+                            <div class="location">
+                                <img src="../img/pin-Icon.svg" alt="pin-Icon" />
+                                <p>1800-1818 79th St</p>
+                            </div>
+                            <div class="description-row">
+                                <div class="price">
+                                    <p>&#36;395,000</p>
+                                </div>
+                                <div class="specification">
+                                    <div class="bedrooms">
+                                        <img
+                                            src="../img/bed-icon.svg"
+                                            alt="bed-icon"
+                                        />
+                                        <p>4</p>
+                                    </div>
+                                    <div class="bathrooms">
+                                        <img
+                                            src="../img/bath-icon.svg"
+                                            alt="bath-icon"
+                                        />
+                                        <p>1</p>
+                                    </div>
+                                    <div class="square">
+                                        <img
+                                            src="../img/square-icon.svg"
+                                            alt="square-icon"
+                                        />
+                                        <p>400</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="widget">
+                        <div class="image-background"></div>
+                        <div class="widget-description">
+                            <p class="widget-title">Luxury Family Home</p>
+                            <div class="location">
+                                <img src="../img/pin-Icon.svg" alt="pin-Icon" />
+                                <p>1800-1818 79th St</p>
+                            </div>
+                            <div class="description-row">
+                                <div class="price">
+                                    <p>&#36;395,000</p>
+                                </div>
+                                <div class="specification">
+                                    <div class="bedrooms">
+                                        <img
+                                            src="../img/bed-icon.svg"
+                                            alt="bed-icon"
+                                        />
+                                        <p>4</p>
+                                    </div>
+                                    <div class="bathrooms">
+                                        <img
+                                            src="../img/bath-icon.svg"
+                                            alt="bath-icon"
+                                        />
+                                        <p>1</p>
+                                    </div>
+                                    <div class="square">
+                                        <img
+                                            src="../img/square-icon.svg"
+                                            alt="square-icon"
+                                        />
+                                        <p>400</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="widget">
-                    <div class="image-background"></div>
-                    <div class="widget-description">
-                        <p class="widget-title">Luxury Family Home</p>
-                        <div class="location">
-                            <img src="../img/pin-Icon.svg" alt="pin-Icon" />
-                            <p>1800-1818 79th St</p>
-                        </div>
-                        <div class="description-row">
-                            <div class="price">
-                                <p>&#36;395,000</p>
+                <div class="slider-navigation">
+                    <div class="arrow-icon">
+                        <img src="../img/arrow-left.svg" alt="arrow-left">
+                    </div>
+                    <div class="arrow-icon">
+                        <img src="../img/arrow-right.svg" alt="arrow-right">
+                    </div>
+                </div>
+            </section>
+            <section class="properties-section">
+                <div class="properties-content">
+                    <div class="properties-title">
+                        <h2>Exclusive Properties</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                    <div class="properties-widgets">
+                        <div class="properties-left-widget">
+                            <div class="sale-featured">
+                                <div class="for-sale">
+                                    <p>FOR SALE</p>
+                                </div>
+                                <div class="featured">
+                                    <p>FEATURED</p>
+                                </div>
                             </div>
-                            <div class="specification">
-                                <div class="bedrooms">
-                                    <img
-                                        src="../img/bed-icon.svg"
-                                        alt="bed-icon"
-                                    />
-                                    <p>4</p>
+                            <div class="left-widget-description">
+                                <p class="left-widget-title">Villa One Hyde Park</p>
+                                <div class="left-widget-location">
+                                    <img src="../img/pin-icon-white.svg" alt="pin-icon">
+                                    <p>2050 Bloomingdale Ave</p>
                                 </div>
-                                <div class="bathrooms">
-                                    <img
-                                        src="../img/bath-icon.svg"
-                                        alt="bath-icon"
-                                    />
-                                    <p>1</p>
+                                <div class="left-widget-description">
+                                    <p>$120,000</p>
+                                    <div class="widget-properties-description">
+                                        <div class="rooms-description">
+                                            <img src="../img/bed-icon-white.svg" alt="bed-icon">
+                                            <p>4</p>
+                                        </div>
+                                        <div class="rooms-description">
+                                            <img src="../img/bath-icon-white.svg" alt="bath-icon">
+                                            <p>2</p>
+                                        </div>
+                                        <div class="rooms-description">
+                                            <img src="../img/square-icon-white.svg" alt="square-icon">
+                                            <p>350</p>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="square">
-                                    <img
-                                        src="../img/square-icon.svg"
-                                        alt="square-icon"
-                                    />
-                                    <p>400</p>
+                            </div>
+                        </div>
+                        <div class="properties-right-widgets">
+                            <div class="right-top-widget">
+                                <div class="widget-slider">
+                                    <div class="widget-slider-nav">
+                                        <img src="../img/left-arror-white.svg" alt="left-arror-white">
+                                    </div>
+                                    <div class="widget-slider-nav">
+                                        <img src="../img/right-arrow-white.svg" alt="right-arrow-white">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="right-bottom-widget">
+                                <div class="bottom-left-widget">
+                                    <div class="play-button">
+                                        <img src="../img/play-button.svg" alt="play-button">
+                                    </div>
+                                </div>
+                                <div class="bottom-right-widget">
+                                    <div>
+                                        <div>
+                                            <p>280+</p>
+                                            <p>properties</p>
+                                            <p>Explore our wide variety of properties to fid your dream home today</p>
+                                        </div>
+                                        <div class="arrow-button">
+                                            <div class="arrow-icon">
+                                                <img src="../img/arrow-for-button-icon.svg" alt="arrow-for-button-icon">
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="widget">
-                    <div class="image-background"></div>
-                    <div class="widget-description">
-                        <p class="widget-title">Luxury Family Home</p>
-                        <div class="location">
-                            <img src="../img/pin-Icon.svg" alt="pin-Icon" />
-                            <p>1800-1818 79th St</p>
-                        </div>
-                        <div class="description-row">
-                            <div class="price">
-                                <p>&#36;395,000</p>
-                            </div>
-                            <div class="specification">
-                                <div class="bedrooms">
-                                    <img
-                                        src="../img/bed-icon.svg"
-                                        alt="bed-icon"
-                                    />
-                                    <p>4</p>
-                                </div>
-                                <div class="bathrooms">
-                                    <img
-                                        src="../img/bath-icon.svg"
-                                        alt="bath-icon"
-                                    />
-                                    <p>1</p>
-                                </div>
-                                <div class="square">
-                                    <img
-                                        src="../img/square-icon.svg"
-                                        alt="square-icon"
-                                    />
-                                    <p>400</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div></div>
             </section>
         </main>
         <div class="iframe-footer-conteiner">
