listings html + style

--- a/pages/listings.html
+++ b/pages/listings.html
@@ -339,6 +339,8 @@
                                     <div class="widget-slider-nav">
                                         <img src="../img/left-arror-white.svg" alt="left-arror-white">
                                     </div>
+                                </div>
+                                <div class="widget-slider">
                                     <div class="widget-slider-nav">
                                         <img src="../img/right-arrow-white.svg" alt="right-arrow-white">
                                     </div>
@@ -350,17 +352,15 @@
                                         <img src="../img/play-button.svg" alt="play-button">
                                     </div>
                                 </div>
-                                <div class="bottom-right-widget">
-                                    <div>
-                                        <div>
-                                            <p>280+</p>
-                                            <p>properties</p>
-                                            <p>Explore our wide variety of properties to fid your dream home today</p>
-                                        </div>
-                                        <div class="arrow-button">
-                                            <div class="arrow-icon">
-                                                <img src="../img/arrow-for-button-icon.svg" alt="arrow-for-button-icon">
-                                            </div>
+                                <div class="bottom-right-yellow">
+                                    <div class="bottom-right-yellow-description">
+                                        <p class="number-properties">280+</p>
+                                        <p>Properties</p>
+                                        <p class="properties-description">Explore our wide variety of properties to fid your dream home today</p>
+                                    </div>
+                                    <div class="arrow-button">
+                                        <div class="arrow-icon">
+                                            <img src="../img/arrow-for-button-icon.svg" alt="arrow-for-button-icon">
                                         </div>
                                     </div>
                                 </div>
@@ -369,14 +369,121 @@
                     </div>
                 </div>
             </section>
+            <section class="news-section">
+                <div class="news-content">
+                    <div class="news-title">
+                        <h2>Recent Articles & News</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit.
+                        </p>
+                    </div>
+                    <div class="news-widgets-row">
+                        <div class="news-widget">
+                            <div class="news-widget-image"></div>
+                            <div class="news-widget-date">
+                                <p>Apartment</p>
+                                <div class="news-widget-dot"></div>
+                                <p>March 19, 2024</p>
+                            </div>
+                            <div class="news-widget-description">
+                                <p>
+                                    Housing Markets That Changed the Most This
+                                    Week
+                                </p>
+                            </div>
+                            <div class="news-widget-btn">
+                                <button class="widget-btn" type="button">
+                                    See All Listing
+                                    <img
+                                        src="../img/arrow-for-button-icon.svg"
+                                        alt="arrow-for-button-icon"
+                                    />
+                                </button>
+                            </div>
+                        </div>
+                        <div class="news-widget">
+                            <div class="news-widget-image"></div>
+                            <div class="news-widget-date">
+                                <p>Apartment</p>
+                                <div class="news-widget-dot"></div>
+                                <p>March 19, 2024</p>
+                            </div>
+                            <div class="news-widget-description">
+                                <p>
+                                    Housing Markets That Changed the Most This
+                                    Week
+                                </p>
+                            </div>
+                            <div class="news-widget-btn">
+                                <button class="widget-btn" type="button">
+                                    See All Listing
+                                    <img
+                                        src="../img/arrow-for-button-icon.svg"
+                                        alt="arrow-for-button-icon"
+                                    />
+                                </button>
+                            </div>
+                        </div>
+                        <div class="news-widget">
+                            <div class="news-widget-image"></div>
+                            <div class="news-widget-date">
+                                <p>Apartment</p>
+                                <div class="news-widget-dot"></div>
+                                <p>March 19, 2024</p>
+                            </div>
+                            <div class="news-widget-description">
+                                <p>
+                                    Housing Markets That Changed the Most This
+                                    Week
+                                </p>
+                            </div>
+                            <div class="news-widget-btn">
+                                <button class="widget-btn" type="button">
+                                    See All Listing
+                                    <img
+                                        src="../img/arrow-for-button-icon.svg"
+                                        alt="arrow-for-button-icon"
+                                    />
+                                </button>
+                            </div>
+                        </div>
+                        <div class="news-widget">
+                            <div class="news-widget-image"></div>
+                            <div class="news-widget-date">
+                                <p>Apartment</p>
+                                <div class="news-widget-dot"></div>
+                                <p>March 19, 2024</p>
+                            </div>
+                            <div class="news-widget-description">
+                                <p>
+                                    Housing Markets That Changed the Most This
+                                    Week
+                                </p>
+                            </div>
+                            <div class="news-widget-btn">
+                                <button class="widget-btn" type="button">
+                                    See All Listing
+                                    <img
+                                        src="../img/arrow-for-button-icon.svg"
+                                        alt="arrow-for-button-icon"
+                                    />
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
-        <div class="iframe-footer-conteiner">
-            <iframe
-                class="iframe-footer"
-                src="/components/footer.html"
-                scrolling="no"
-            ></iframe>
-        </div>
+        <footer>
+            <div class="iframe-footer-conteiner">
+                <iframe
+                    class="iframe-footer"
+                    src="/components/footer.html"
+                    scrolling="no"
+                ></iframe>
+            </div>
+        </footer>
         <script
             src="https://kit.fontawesome.com/7d14a42481.js"
             crossorigin="anonymous"
