--- a/index.html
+++ b/index.html
@@ -89,17 +89,40 @@
                             <a href="#">Link 3</a>
                         </div>
                     </div>
-                    <div class="dropdown">
-                        <a href="#">Contact</a>
-                    </div>
                 </nav>
                 <div class="nav-right-block">
                     <div class="phone">
-                        <img src="img/phone_icon.svg" alt="phone_icon" />
+                        <img src="/img/phone_icon.svg" alt="phone_icon" />
                         <a href="tel:+6868588666">+68 685 88666</a>
                     </div>
-
-                    <img src="img/profile_icon.svg" alt="profile_icon" />
+                    <div>
+                        <div class="some-text">
+                            <a class="button" href="#popup"><img src="/img/profile_icon.svg" alt="profile_icon" /><a />
+                          </div>
+                        
+                          <div class="popup" id="popup">
+                            <div class="form">
+                                <div class="title">Welcome</div>
+                                <div class="subtitle">Let's create your account!</div>
+                                <div class="input-container ic1">
+                                  <input id="firstname" class="input" type="text" placeholder=" " />
+                                  <div class="cut"></div>
+                                  <label for="firstname" class="placeholder">First name</label>
+                                </div>
+                                <div class="input-container ic2">
+                                  <input id="lastname" class="input" type="text" placeholder=" " />
+                                  <div class="cut"></div>
+                                  <label for="lastname" class="placeholder">Last name</label>
+                                </div>
+                                <div class="input-container ic2">
+                                  <input id="email" class="input" type="text" placeholder=" " />
+                                  <div class="cut cut-short"></div>
+                                  <label for="email" class="placeholder">Email</>
+                                </div>
+                                <button type="text" class="submit">submit</button>
+                              </div>
+                          </div>
+                    </div>
                     <button class="add-button" type="button">
                         Add Property
                     </button>
